# k8s-flyte-playground

./: Dockerfile  Makefile  pyproject.toml  readme.md
k8s/flyte/: values.yaml
k8s/minio/: values.yaml
k8s/postgres/: postgres-toy.yaml
src/: example.py
