[tool.poetry]
name = "k8s_flyte_playground"
version = "0.1.0"
description = ""
authors = ["Mark deVilliers <mark.devilliers@adarga.ai>"]
readme = "README.md"
packages = [{include = ".", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.4"
flytekit = "1.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
